# RagBackend

./: .env.example  .gitignore  API.md  CHANGELOG.md  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  README_zh.md  docker-compose.test.yml  docker-compose.yml  env.example  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: changelog.mdc  project.mdc
.github/workflows/: _test.yml  ci.yml
docs/: admin_user.md  authentication.md  pgvectorstore-migration.md  siliconflow-embedding.md
langconnect/: __init__.py  __main__.py  auth.py  config.py  defaults.py  server.py
langconnect/api/: __init__.py  admin.py  collections.py  documents.py
langconnect/database/: __init__.py  collections.py  connection.py  documents.py  init_db.py  utils.py
langconnect/models/: __init__.py  collection.py  document.py
langconnect/services/: __init__.py  document_processor.py
langconnect/utils/: __init__.py  task_queue.py
ragbackend/: __init__.py  __main__.py  auth.py  config.py  server.py
ragbackend/api/: __init__.py  auth.py  collections.py  documents.py  files.py
ragbackend/database/: __init__.py  collections.py  connection.py  files.py  users.py
ragbackend/models/: __init__.py
ragbackend/schemas/: __init__.py  collection.py  users.py
ragbackend/services/: __init__.py  document_processor.py  jwt_service.py  minio_service.py
scripts/: start_service.sh
tests/: README.md  integration_test_env.py
tests/unit_tests/: conftest.py  fixtures.py  test_api_integration.py  test_auth.py  test_collections_api.py  test_documents_api.py  test_imports.py  test_server.py
